<b>Version 1.26</b>:<br>
<ul>
    <li>[<span style="color: blue">INTERFACE</span>] Abstand unterhalb der Untermenüs eingefügt</li>
    <li>[<span style="color: blue">INTERFACE</span>] Hauptmenü am oberen Rand fixiert</li>
</ul>
<b>Version 1.251</b>:<br>
<ul>
    <li>[<span style="color: red"><b>HOTFIX</b></span>] Ordnerübergreifender Zurück-Link auf Tiefe 1 hat falsch negative Ergebnisse produziert</li>
</ul>
<b>Version 1.25</b>:<br>
<ul>
    <li>[<span style="color: blue">INTERFACE</span>] Unterstützte Dateiformate können in der Hilfe nun ein- und ausgeblendet werden</li>
    <li>[<span style="color: blue">INTERFACE</span>] Ladeanimation angepasst. Geringerer Kontrast, langsamere Animation</li>
    <li>[<span style="color: darkgreen">BUGFIX</span>] Fehlerhaftes Vehalten beim Hinzufügen eines Favoriten, wenn bereits ein oder mehrere Favoriten vorhanden waren</li>
</ul>
<b>Version 1.242</b>:<br>
<ul>
    <li>[<span style="color: red"><b>HOTFIX</b></span>] Vor-/Zurück-Button nur noch zu Medieninhalten möglich</li>
    <li>[<span style="color: red"><b>HOTFIX</b></span>] Preview-Bilder werden bei Vor-/Zurück-Button ignoriert</li>
</ul>
<b>Version 1.241</b>:<br>
<ul>
    <li>[<span style="color: red"><b>HOTFIX</b></span>] Erstellung der Vorwärts/Rückwärts-Buttonlinks auf Tiefe 3 mit fehlender Playlistangabe</li>
</ul>
<b>Version 1.24</b>:<br>
<ul>
    <li>[<span style="color: blue">INTERFACE</span>] Hilfestellung für Preview-Ordner eingefügt</li>
    <li>[<span style="color: blue">INTERFACE</span>] Media-Element ausgeblendet, solange keine Inhalte angezeigt werden</li>
    <li>[<span style="color: darkgreen">BUGFIX</span>] Fehler beim Erstellen der Favoritenliste</li>
    <li>[<span style="color: darkgreen">BUGFIX</span>] Verlinkungen des Next-Buttons gefixt</li>
</ul>
<b>Version 1.23</b>:<br>
<ul>
    <li>[<span style="color: blue">INTERFACE</span>] Ladereihenfolge für Ladebalken angepasst um Weisses Bild zu verhindern</li>