@@ -48,7 +48,7 @@
             width: 40px;
             height: 40px;
             background-color: black;
-            animation: loading 6.0s ease-in-out;
+            animation: loading 3.0s ease-in-out;
             animation-iteration-count: infinite;
             border-radius: 20px;
             color: black;
